Instruction spacing and transparency fixed

--- a/less/variables.less
+++ b/less/variables.less
@@ -11,7 +11,7 @@
 @inverted-background-color:#3eb4e4;
 
 @transparency:rgba(255,255,255,0.8);
-@transparency-fallback-png:url('assets/transparent-light.png');
+@transparency-fallback-png:url('assets/transparency-light.png');
 
 // Item setup
 // ==========
@@ -81,7 +81,7 @@
 
 @title-spacing:10px 0px;
 @body-spacing:0px 0px 20px;
-
+@instruction-spacing: 0px 0px 20px;
 
 
 // Navigation
